--- a/package.json
+++ b/package.json
@@ -12,27 +12,30 @@
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@hapi/iron": "^6.0.0",
-    "@prisma/client": "^2.0.0-beta.5",
+    "@prisma/client": "^2.0.0",
     "argon2": "^0.26.2",
     "cookie": "^0.4.1",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^1.11.0",
     "next": "^9.4.2",
     "next-connect": "^0.6.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-timeago": "^4.4.0",
     "swr": "^0.2.2"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.0.0-beta.5",
+    "@prisma/cli": "^2.0.0",
     "@types/cookie": "^0.4.0",
     "@types/node": "^14.0.5",
     "@types/passport": "^1.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-timeago": "^4.1.1",
     "typescript": "^3.9.3"
   }
 }
