--- a/package.json
+++ b/package.json
@@ -5,38 +5,38 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.5.2",
-    "@emotion/core": "^10.0.27",
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@hapi/iron": "^6.0.0",
     "@prisma/client": "^2.8.1",
-    "argon2": "^0.26.2",
+    "argon2": "^0.27.0",
     "cookie": "^0.4.1",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
-    "framer-motion": "^1.11.0",
-    "next": "^9.4.2",
-    "next-connect": "^0.6.6",
+    "framer-motion": "^2.9.1",
+    "next": "^9.5.5",
+    "next-connect": "^0.9.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
-    "react-timeago": "^4.4.0",
-    "swr": "^0.2.2"
+    "react-timeago": "^5.2.0",
+    "swr": "^0.3.5"
   },
   "devDependencies": {
     "@prisma/cli": "^2.8.1",
     "@types/cookie": "^0.4.0",
-    "@types/node": "^14.0.5",
+    "@types/node": "^14.11.8",
     "@types/passport": "^1.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-timeago": "^4.1.1",
-    "typescript": "^3.9.3"
+    "typescript": "^4.0.3"
   }
 }
