--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@hapi/iron": "^6.0.0",
-    "@prisma/client": "^2.8.1",
+    "@prisma/client": "^2.9.0",
     "argon2": "^0.27.0",
     "cookie": "^0.4.1",
     "dotenv": "^8.2.0",
@@ -25,11 +25,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
+    "react-icons": "^3.11.0",
     "react-timeago": "^5.2.0",
-    "swr": "^0.3.5"
+    "swr": "^0.3.5",
+    "use-persisted-state": "^0.3.0"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.8.1",
+    "@prisma/cli": "^2.9.0",
     "@types/cookie": "^0.4.0",
     "@types/node": "^14.11.8",
     "@types/passport": "^1.0.3",
@@ -37,6 +39,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-timeago": "^4.1.1",
+    "@types/use-persisted-state": "^0.3.0",
     "typescript": "^4.0.3"
   }
 }
