--- a/package.json
+++ b/package.json
@@ -8,21 +8,24 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.1.1",
-    "@emotion/styled": "^10.0.27",
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "@hapi/iron": "^6.0.0",
-    "@prisma/client": "^2.10.2",
+    "@prisma/client": "^2.11.0",
     "argon2": "^0.27.0",
+    "aws-sdk": "^2.790.0",
+    "busboy": "^0.3.1",
     "cookie": "^0.4.1",
     "dotenv": "^8.2.0",
-    "emotion-theming": "^10.0.27",
     "framer-motion": "^2.9.4",
+    "nanoid": "^3.1.16",
     "next": "^10.0.1",
     "next-connect": "^0.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react": "^16.13.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.5",
     "react-icons": "^3.11.0",
@@ -31,7 +34,8 @@
     "use-persisted-state": "^0.3.0"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.10.2",
+    "@prisma/cli": "^2.11.0",
+    "@types/busboy": "^0.2.3",
     "@types/cookie": "^0.4.0",
     "@types/node": "^14.11.8",
     "@types/passport": "^1.0.3",
@@ -40,6 +44,6 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-timeago": "^4.1.1",
     "@types/use-persisted-state": "^0.3.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   }
 }
