--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "@types/react-timeago": "^4.1.1",
     "@types/use-persisted-state": "^0.3.0",
     "typescript": "^4.0.5"
-  }
+  },
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
