--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^3.11.0",
     "react-timeago": "^5.2.0",
     "swr": "^0.3.8",
-    "use-persisted-state": "^0.3.0"
+    "use-persisted-state": "^0.3.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@prisma/cli": "^2.11.0",
@@ -45,6 +46,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-timeago": "^4.1.1",
     "@types/use-persisted-state": "^0.3.0",
+    "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
