--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-connect": "^0.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pg-escape": "^0.2.0",
     "react": "^16.13.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
@@ -32,6 +33,7 @@
     "react-icons": "^3.11.0",
     "react-timeago": "^5.2.0",
     "swr": "^0.3.8",
+    "use-debounce": "^5.1.0",
     "use-persisted-state": "^0.3.0",
     "yup": "^0.29.3"
   },
