--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aws-sdk": "^2.790.0",
     "busboy": "^0.3.1",
     "cookie": "^0.4.1",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.9.4",
     "nanoid": "^3.1.16",
@@ -46,6 +47,7 @@
     "@types/passport": "^1.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^16.9.35",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-timeago": "^4.1.1",
     "@types/use-persisted-state": "^0.3.0",
